Corrected version of StatisticsCalculator